Fixed Image Spacing on Mobile

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,6 @@
     width: 300px;
     padding: 20px;
     height:350px;
-    align-self: center;
     
   }
 
